--- a/src/main/resources/templates/selWeeklyPage.html
+++ b/src/main/resources/templates/selWeeklyPage.html
@@ -31,7 +31,7 @@
     <style>
         table{
             width: 100%;
-            height: 200px;
+            height: 600px;
             border: black 1px solid;
         }
         table tr{
@@ -49,59 +49,58 @@
 <div class="col-lg-12">
     <div class="card">
         <div class="card-header d-flex align-items-center">
-            <h4>个人资料管理（修改）</h4>
+            <h4>周报查询</h4>
         </div>
-        <div class="card-body">
-            <form action="savStuPage" class="form-horizontal">
-                <div class="form-group row">
-                    <label class="col-sm-2 form-control-label">姓名：</label>
-                    <div class="col-sm-10">
-                        <input type="text" name="username" th:value="${userByUname.username}" class="form-control" readonly="readonly">
-                    </div>
-                </div>
-                <div class="line"></div>
-                <div class="form-group row">
-                    <label class="col-sm-2 form-control-label">密码：</label>
-                    <div class="col-sm-10">
-                        <input type="text" name="password" th:value="${userByUname.password}" class="form-control"><span class="text-small text-gray help-block-none">A block of help text that breaks onto a new line and may extend beyond one line.</span>
-                    </div>
-                </div>
-                <!--<div class="line"></div>
-                <div class="form-group row">
-                    <label class="col-sm-2 form-control-label">密码：</label>
-                    <div class="col-sm-10">
-                        <input type="password" th:value="${userByUname.password}" name="password" class="form-control">
-                    </div>
-                </div>-->
-                <div class="line"></div>
-                <div class="form-group row">
-                    <label class="col-sm-2 form-control-label">照片：</label>
-                    <div class="col-sm-10">
-                        <table>
-                            <tr>
-                                <td>
-                                    <img th:src="'img/'+${userByUname.img}" th:width="200px" th:height="200px">
-                                </td>
-                                <td>
-                                    <input type="file" name="img" th:value="${userByUname.img}">
-                                </td>
-                            </tr>
-                        </table>
-                        <br>
+        <div class="card-body" th:height="800px">
+            <table>
+                <tr>
+                    <th>序号</th>
+                    <th>姓名</th>
+                    <th>标题</th>
+                    <th>时间</th>
+                    <th>内容</th>
+                    <th>分数</th>
+                    <th>操作</th>
+                </tr>
+                <tr th:each="w,i:${weekly.list}">
+                    <td th:text="${i.count}"></td>
+                    <td th:text="${w.getUsername()}"></td>
+                    <td th:text="${w.getTitle()}"></td>
+                    <td th:text="${w.getTime()}"></td>
+                    <td th:text="${w.getReport()}"></td>
+                    <td th:if="${w.getScore() == -1}"th:text="未打分" ></td>
+                    <td th:if="${w.getScore() != -1}" th:text="${w.getScore()}"></td>
+                    <td th:if="${w.getScore() == -1}">
+                        <a th:href="@{delWeekly(wid=${w.getWid()})}">删除</a>
+                    </td>
+                    <td th:if="${w.getScore() != -1}">
+                        <a>删除</a>
+                    </td>
+                </tr>
 
-                    </div>
-                </div>
+            </table>
 
-                <div class="line"></div>
+            <table class="gridtable" style="width:100%;height: 100px; text-align: center">
+                <tr>
+                    <td width="10%" th:if="${weekly.hasPreviousPage}">
+                        <a th:href="'?pageNo=1'">首页</a>
+                    </td>
+                    <td width="10%" th:if="${weekly.hasPreviousPage}">
+                        <a th:href="'?pageNo='+${weekly.prePage}">上一页</a>
+                    </td>
+                    <td width="10%" th:each="nav : ${weekly.navigatepageNums}">
+                        <a th:href="'?pageNo='+${nav}" th:text="${nav}" th:if="${nav != weekly.pageNum}"></a>
+                        <span style="font-weight: bold" th:if="${nav == weekly.pageNum}" th:text="${nav}"></span>
+                    </td>
+                    <td width="10%" th:if="${weekly.hasNextPage}">
+                        <a th:href="'?pageNo='+${weekly.nextPage}">下一页</a>
+                    </td>
+                    <td width="10%" th:if="${weekly.hasNextPage}">
+                        <a th:href="'?pageNo='+${weekly.pages}">尾页</a>
+                    </td>
+                </tr>
+            </table>
 
-                <div class="card-header d-flex align-items-center">
-                    <h4>Submit Form</h4>
-                </div>
-
-                <div class="form-group">
-                    <input type="submit" value="Submit" class="mr-3 btn btn-primary">
-                </div>
-            </form>
         </div>
     </div>
 </div>
