--- a/src/main/resources/templates/updStuPage.html
+++ b/src/main/resources/templates/updStuPage.html
@@ -32,14 +32,14 @@
         table{
             width: 100%;
             height: 200px;
-            border: black 1px solid;
+            /*border: black 1px solid;*/
         }
-        table tr{
+        /*table tr{
             border: black 1px solid;
         }
         table tr td{
             border: black 1px solid;
-        }
+        }*/
     </style>
 </head>
 <body>
@@ -66,13 +66,7 @@
                         <input type="text" name="password" th:value="${userByUname.password}" class="form-control"><span class="text-small text-gray help-block-none">A block of help text that breaks onto a new line and may extend beyond one line.</span>
                     </div>
                 </div>
-                <!--<div class="line"></div>
-                <div class="form-group row">
-                    <label class="col-sm-2 form-control-label">密码：</label>
-                    <div class="col-sm-10">
-                        <input type="password" th:value="${userByUname.password}" name="password" class="form-control">
-                    </div>
-                </div>-->
+
                 <div class="line"></div>
                 <div class="form-group row">
                     <label class="col-sm-2 form-control-label">照片：</label>
@@ -82,7 +76,7 @@
                                 <td>
                                     <img th:src="'img/'+${userByUname.img}" th:width="200px" th:height="200px">
                                 </td>
-                                <td>
+                                <td th:if="${userByUname.rolename == 'student'}">
                                     <input type="file" name="img" th:value="${userByUname.img}">
                                 </td>
                             </tr>
