--- a/src/main/resources/templates/updStuPage.html
+++ b/src/main/resources/templates/updStuPage.html
@@ -52,7 +52,7 @@
             <h4>个人资料管理（修改）</h4>
         </div>
         <div class="card-body">
-            <form action="savStuPage" class="form-horizontal">
+            <form action="savStuPage" class="form-horizontal" enctype="multipart/form-data" method="post" >
                 <div class="form-group row">
                     <label class="col-sm-2 form-control-label">姓名：</label>
                     <div class="col-sm-10">
@@ -74,11 +74,37 @@
                         <table>
                             <tr>
                                 <td>
-                                    <img th:src="'img/'+${userByUname.img}" th:width="200px" th:height="200px">
+                                    <input id="upload-file" name="file" th:value="${userByUname.img}" type="file">
                                 </td>
-                                <td th:if="${userByUname.rolename == 'student'}">
-                                    <input type="file" name="img" th:value="${userByUname.img}">
+                                <td>
+                                    <div id="destination" style="width:200px;height:200px;border: black 2px solid">
+                                        <img height="200px" th:src="'img/'+${userByUname.img}" width="200px">
+                                    </div>
                                 </td>
+                                <script type="text/javascript">
+                                    document.getElementById('upload-file').addEventListener('change', function() {
+                                        var file;
+                                        var destination = document.getElementById('destination');
+                                        destination.innerHTML = '';//每次清空内容
+
+                                        // 循环用户多选的文件
+                                        for(var x = 0, xlen = this.files.length; x < xlen; x++) {
+                                            file = this.files[x];
+                                            console.log(file);
+                                            if(file.type.indexOf('image') != -1) { // 非常简单的交验，判断文件是否是图片
+                                                var reader = new FileReader();//文件预览对象
+                                                reader.readAsDataURL(file);//设置要预览的文件
+                                                reader.onload = function(e) {//监听文件加载完成事件
+                                                    var img = new Image();//创键预览图片
+                                                    img.src = e.target.result; //把预览图片的src设置为e.target.result属性。返回预览文件的二进制内存数据
+                                                    img.height=200;
+                                                    img.width=200;
+                                                    destination.appendChild(img);//在把每张图片，放到预览区域
+                                                };
+                                            }
+                                        }
+                                    });
+                                </script>
                             </tr>
                         </table>
                         <br>
