--- a/src/main/resources/templates/addVacate.html
+++ b/src/main/resources/templates/addVacate.html
@@ -69,6 +69,16 @@
                         <input class="form-control" name="reason" type="text">
                     </div>
                 </div>
+
+                <div class="line"></div>
+                <div class="form-group row">
+                    <label class="col-sm-2 form-control-label">校长：</label>
+                    <div class="col-sm-10">
+                        <select name="bName">
+                            <option th:each="p:${principal}" th:text="${p.getUsername()}" th:value="${p.getUsername()}"></option>
+                        </select>
+                    </div>
+                </div>
                 <div class="line"></div>
 
                 <div class="card-header d-flex align-items-center">
