--- a/src/main/resources/templates/importSucPage.html
+++ b/src/main/resources/templates/importSucPage.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>学生批量导入导出</title>
+    <title>导出成功界面</title>
 
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <title>Bootstrap Dashboard</title>
@@ -36,52 +36,10 @@
 <div class="col-lg-12">
     <div class="card">
         <div class="card-header d-flex align-items-center">
-            <h4>学生批量导入导出</h4>
+            <h4>导出成功界面</h4>
         </div>
         <div class="card-body">
-            <div class="line"></div>
-            <div class="card-header d-flex align-items-center">
-                <h4>导入</h4>
-            </div>
-            <form action="savStu" enctype="multipart/form-data" method="post">
-                <input name="file" type="file"/>
-                <input type="submit">
-            </form>
-            <div class="line"></div>
-
-            <table>
-
-            </table>
-
-            <div class="line"></div>
-
-            <div class="card-header d-flex align-items-center">
-                <h4>导出</h4>
-            </div>
-
-                <button><a th:href="@{importSucPage}">导出</a></button>
-            <br/>
-
-            <table>
-                <tr>
-                    <td>序号</td>
-                    <td>姓名</td>
-                    <td>标题</td>
-                    <td>时间</td>
-                    <td>内容</td>
-                    <td>分数</td>
-                </tr>
-                <tr th:each="w,var:${weekly}">
-                    <td th:text="${var.count}"></td>
-                    <td th:text="${w.getUsername()}"></td>
-                    <td th:text="${w.getTitle()}"></td>
-                    <td th:text="${w.getTime()}"></td>
-                    <td th:text="${w.getReport()}"></td>
-                    <td th:text="${w.getScore()}"></td>
-                </tr>
-            </table>
-            <div class="line"></div>
-
+            <img src="/img/a.gif"/>
         </div>
     </div>
 </div>
