--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,16 +36,16 @@
           <div class="form-inner">
             <div class="logo text-uppercase"><span>Bootstrap</span><strong class="text-primary">Dashboard</strong></div>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
-            <form method="get" class="text-left form-validate">
+            <form action="log" method="post" class="text-left form-validate">
               <div class="form-group-material">
-                <input id="login-username" type="text" name="loginUsername" required data-msg="Please enter your username" class="input-material">
-                <label for="login-username" class="label-material">Username</label>
+                <input id="username" type="text" name="username" required data-msg="Please enter your username" class="input-material">
+                <label for="username" class="label-material">用户名</label>
               </div>
               <div class="form-group-material">
-                <input id="login-password" type="password" name="loginPassword" required data-msg="Please enter your password" class="input-material">
-                <label for="login-password" class="label-material">Password</label>
+                <input id="password" type="password" name="password" required data-msg="Please enter your password" class="input-material">
+                <label for="password" class="label-material">密码</label>
               </div>
-              <div class="form-group text-center"><a id="login" href="index.html" class="btn btn-primary">Login</a>
+              <div class="form-group text-center"><input type="submit" class="btn btn-primary" value="登录">
                 <!-- This should be submit button but I replaced it with <a> for demo purposes-->
               </div>
             </form><a href="#" class="forgot-pass">Forgot Password?</a><small>Do not have an account? </small><a href="register.html" class="signup">Signup</a>
